force-app/main/default/objects/Account/fields/RequiredCurrency__c.field-meta.xml
<CustomField>
    <fullName>RequiredCurrency__c</fullName>
    <label>RequiredCurrency</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>