force-app/main/default/objects/Account/fields/RequiredDate__c.field-meta.xml
<CustomField>
    <fullName>RequiredDate__c</fullName>
    <label>RequiredDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>