force-app/main/default/objects/Account/fields/RequiredDateTime__c.field-meta.xml
<CustomField>
    <fullName>RequiredDateTime__c</fullName>
    <label>RequiredDateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>