force-app/main/default/objects/Account/fields/RequiredEmail__c.field-meta.xml
<CustomField>
    <fullName>RequiredEmail__c</fullName>
    <label>RequiredEmail</label>
    <required>true</required>
    <type>Email</type>
</CustomField>