force-app/main/default/objects/Account/fields/RequiredGeolocation__c.field-meta.xml
<CustomField>
    <fullName>RequiredGeolocation__c</fullName>
    <label>RequiredGeolocation</label>
    <required>true</required>
    <scale>3</scale>
    <type>Location</type>
</CustomField>