force-app/main/default/objects/Account/fields/RequiredNumber__c.field-meta.xml
<CustomField>
    <fullName>RequiredNumber__c</fullName>
    <label>RequiredNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>