force-app/main/default/objects/Account/fields/RequiredPercent__c.field-meta.xml
<CustomField>
    <fullName>RequiredPercent__c</fullName>
    <label>RequiredPercent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>