force-app/main/default/objects/Account/fields/RequiredPhone__c.field-meta.xml
<CustomField>
    <fullName>RequiredPhone__c</fullName>
    <label>RequiredPhone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>