force-app/main/default/objects/Account/fields/RequiredPicklist__c.field-meta.xml
<CustomField>
    <fullName>RequiredPicklist__c</fullName>
    <label>RequiredPicklist</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>value1</fullName>
            </value>
            <value>
                <fullName>vavlue2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>