force-app/main/default/objects/Account/fields/RequiredPicklistMultilist__c.field-meta.xml
<CustomField>
    <fullName>RequiredPicklistMultilist__c</fullName>
    <label>RequiredPicklistMultilist</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vavl1</fullName>
            </value>
            <value>
                <fullName>vavl2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>