force-app/main/default/objects/Account/fields/RequiredText__c.field-meta.xml
<CustomField>
    <fullName>RequiredText__c</fullName>
    <label>RequiredText</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>