force-app/main/default/objects/Account/fields/RequiredTextArea__c.field-meta.xml
<CustomField>
    <fullName>RequiredTextArea__c</fullName>
    <label>RequiredTextArea</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>