force-app/main/default/objects/Account/fields/RequiredTime__c.field-meta.xml
<CustomField>
    <fullName>RequiredTime__c</fullName>
    <label>RequiredTime</label>
    <required>true</required>
    <type>Time</type>
</CustomField>