force-app/main/default/objects/Account/fields/RequiredURL__c.field-meta.xml
<CustomField>
    <fullName>RequiredURL__c</fullName>
    <label>RequiredURL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>